feat: sources dialog

--- a/lib/i18n/de.json
+++ b/lib/i18n/de.json
@@ -1,4 +1,5 @@
 {
   "showGovernment": "Regierung anzeigen",
-  "animations": "Animationen"
+  "animations": "Animationen",
+  "sources": "Quellen"
 }
